# goit-pythonweb-hw-012

./: .env_example  .gitignore  main.py  pyproject.toml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_static/: documentation_options.js
migrations/versions/: 2e1c74bc0530_added_user.py  6ef935cdb1d8_added_roles.py
src/conf/: config.py  constants.py
src/models/: contact_model.py  user_model.py
src/repositories/: base_repo.py  contacts_repo.py  refresh_token_repo.py  users_repo.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: user.py
src/services/: auth.py  contacts.py  email.py  user.py
src/services/templates/: verify_email.html
src/utils/: depend_service.py
tests/: conftest.py  test_contact_repository_unit.py  test_integration_auth.py  test_user_repository_unit.py
